# functional_error_handling

./: .gitignore  Functional Error Handling.md  LICENSE  Notes.md  README.md  Slides.md  Slides2.md  Untitled.md  all_test.py  pyproject.toml  refresh.bat  update_markdown.py  update_markdown_code_listings.py
.obsidian/snippets/: slide_fixes.css
etc/: Notes.md  VSCode_tools.txt  settings.json
src/functional_error_handling/: Notes.md  __init__.py  all_test.py  composed.py  composed_tuples.py  comprehension1.py  comprehension2.py  comprehension2_validate.py  comprehension3.py  comprehension4.py  comprehension4_returns.py  comprehension5.py  comprehension5_returns.py  comprehension6.py  do_notation.py  example1.py  example2.py  example3.py  example4.py  example5.py  example6.py  multiple_arguments.py  multiple_arguments_curry.py  multiple_arguments_io_do.py  multiple_arguments_result_do.py  multiple_arguments_tuples.py  regen.bat  result.py  result_basic.py  result_with_bind.py  results_pipeline.py  test.py  update_output.py  util.py  validate_output.py
src/unused/: comprehension6.py  do_notation.py  multiple_arguments_curry.py  multiple_arguments_io_do.py  multiple_arguments_tuples.py
