[project]
name = "functional-error-handling"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Bruce Eckel", email = "MindviewInc@gmail.com" }
]
dependencies = [
    "pretty_errors>=1.2.25",
    "returns>=0.22.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
